# blind-watermark

./: README.md  README_zh-CN.md  package.oo.yaml  pyproject.toml  requirements.txt
flows/flow-1/: .flow.ui.oo.json  flow.oo.yaml
oo-locales/: en.json  zh-CN.json
tasks/add_text_water_mark/: __init__.py  task.oo.yaml
tasks/extract_text_water_mark/: __init__.py  task.oo.yaml
