[project]
name = "workspace"
version = "0.1.0"
description = "A workspace project"
authors = [
    {name = "User",email = "user@example.com"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "blind-watermark (==0.4.4)",
    "opencv-python (==4.10.0.84)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
